# CayLang

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  coverage.sh  demo_setup.sh  fold_syntax.lalrpop  install.sh  loud_test_1.sh  make_docs.sh  run_test_1.sh  time_test_1.sh
.github/workflows/: ci.yml
caylang/cay/: Cargo.toml
caylang/cay/src/: cay_tests.rs  lib.rs  main.rs
caylang/cay/src/cmd/: build.rs  mod.rs
caylang/cay/test/cases/simple_test_1/: test.cay
caylang/dir-operations/: Cargo.toml
caylang/int-test/: Cargo.toml
caylang/interp/: Cargo.toml
caylang/interp/src/: defn_map.rs  from_ast.rs  interp.rs  lib.rs  test.rs  test_helpers.rs
caylang/interp/src/defn_map/: defn_map.rs  mod.rs  test.rs
caylang/interp/src/template/: ast.rs  mod.rs  parse.rs  test.rs
caylang/interp/src/validate/: mod.rs  test.rs  validate.rs
caylang/parser/: Cargo.toml
caylang/template/: Cargo.toml
caylang/test/: Cargo.toml
docs/spec/: FinalImplementationGuide.md  LanguageSpec.md  Presentation.md  QuickStart.md  UserStories.md  spinup.sh
research/: readme.md
research/dir-operations/: Cargo.toml
samples/: fail_test_2.cay  fold1.cay  fold2.cay  huh.cay  param_ident.cay  print_set.cay  simple_dirset.cay  simple_fold.cay  simple_test_1.cay  simple_test_1_flatten.cay  simple_test_2.cay  star_test.cay  tds.cay
spec/: LanguageSpec.md  QuickStart.md  QuickStart_g.md  example_helpers.py  examples.py  gen_test.py  simple_spec_gen.py  user_story_examples.py
src/: main.rs
test/: folder_tree.py  run_test.sh  simple_tests.py  test1.sh  tests_clean.sh
(+64 files in other folders)
