[package]
name = "cay"
description = "Filesystem description and manipulation language"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caylang-parser = { path = "../parser", version="0.1.0" }
clap = { version = "4.1.8", features = [
  "derive",
  "wrap_help",
  "unicode",
  "string",
] }
lalrpop-util = { version = "0.20.0" }

[build-dependencies]
built = { version = "0.6.0", features = ["git2"] }