[package]
name = "caylang-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caylang-parser = { path = "../parser", version="0.1.0" }
caylang-io = { path = "../dir-operations", version="0.1.0" }
regex = "1.9.5"
debug_print = "1.0.0"
